tests/ui/errors/snapshots/infer_tuple_component_write_names_the_read_only_owner.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `p.0[0]`
   ╭─[test.lis:5:3]
 4 │ fn poke(p: Pair) {
 5 │   p.0[0] = 1
   ·   ─────┬────
   ·        ╰── `p.0` is read-only
 6 │ }
   ╰────
  help: `.0` is declared writable, but `p` is read-only, so its fields are too. Make `p` writable where it is created · code: [infer.write_through_read_only]
