tests/ui/errors/snapshots/infer_tuple_pattern_arity_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Tuple arity mismatch
   ╭─[test.lis:3:7]
 2 │ fn test() {
 3 │   let (a, b, c): (int, int) = (1, 2);
   ·       ────┬────
   ·           ╰── expected 2 elements, found 3 elements
 4 │ }
   ╰────
  help: Adjust the pattern to match the number of elements in the tuple · code: [infer.tuple_element_count_mismatch]
