tests/ui/errors/snapshots/infer_tuple_struct_constructor_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use native constructor as a value
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let f = Point
   ·           ──┬──
   ·             ╰── native constructors must be called directly
 6 │   let _ = f
   ╰────
  help: Use a closure instead: `|args| Point(args)` · code: [infer.native_constructor_value]
