tests/ui/errors/snapshots/infer_type_alias_as_match_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:6:5]
 5 │   match xs {
 6 │     Ints => 0,
   ·     ──┬─
   ·       ╰── not a variant of any enum in scope
 7 │   }
   ╰────
  help: Check that the variant is defined in the enum and spelled correctly · code: [resolve.variant_not_found]
