tests/ui/errors/snapshots/infer_type_alias_as_qualifier_cross_module.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Member not found
   ╭─[main.lis:7:23]
 6 │ fn main() {
 7 │   let s: Slice<int> = B.make()
   ·                       ───┬──
   ·                          ╰── no member `make` on type `Box`
 8 │   let _ = s
   ╰────
  help: Ensure the field or method is defined on this type · code: [infer.member_not_found]
