tests/ui/errors/snapshots/infer_type_alias_as_qualifier_parameterized.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use generic type alias as qualifier
   ╭─[test.lis:4:30]
 3 │ fn main() {
 4 │   let f: fn(int) -> O<int> = O.Some
   ·                              ┬
   ·                              ╰── `O` aliases `Option`
 5 │   let _ = f
   ╰────
  help: Aliases for types with generic parameters are not supported as qualifiers. Use the original type directly: `Option.Some` · code: [infer.type_alias_as_qualifier]
