tests/ui/errors/snapshots/infer_type_alias_of_enum_used_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot use native constructor as a value
   ╭─[test.lis:8:15]
 7 │ fn main() {
 8 │   fmt.Println(Month)
   ·               ──┬──
   ·                 ╰── native constructors must be called directly
 9 │ }
   ╰────
  help: Use a closure instead: `|args| Month(args)` · code: [infer.native_constructor_value]
